some minor errors fixed.